--- a/vignettes/generate_report.Rmd
+++ b/vignettes/generate_report.Rmd
@@ -18,18 +18,14 @@ knitr::opts_chunk$set(
 library(metaboprep)
 
 # import data directly as a Metaboprep object
-dat <- read_metabolon(system.file("extdata", "metabolon_v1.1_example.xlsx", package = "metaboprep"), 
+mydata <- read_metabolon(system.file("extdata", "metabolon_v1.1_example.xlsx", package = "metaboprep"), 
                       sheet="OrigScale",
                       return_Metaboprep = TRUE)
 
-# create the object
-# m <- Metaboprep(data = dat$data, samples = dat$samples, features = dat$features)
-m <- dat
-
 # run QC
 ## Adding suppressWarnings() to avoid deparse() error when rendering vignette with S7 method warnings
-m <- m |>
-  suppressWarnings( quality_control(source_layer = "input", 
+mydata <- mydata |>
+  quality_control(source_layer = "input", 
                                     sample_missingness  = 0.2, 
                                     feature_missingness = 0.2, 
                                     total_peak_area_sd  = 5, 
@@ -39,10 +35,10 @@ m <- m |>
                                     tree_cut_height     = 0.5, 
                                     pc_outlier_sd       = 5, 
                                     sample_ids          = NULL, 
-                                    feature_ids         = NULL) )
+                                    feature_ids         = NULL) 
 
 # render report
-generate_report(m,
+generate_report(mydata,
                 project         = "myproject",
                 output_dir      = getwd(),
                 output_filename = NULL,
