--- a/README.Rmd
+++ b/README.Rmd
@@ -54,9 +54,14 @@ library(metaboprep)
 
 # import data 
 mydata <- read_metabolon(system.file("extdata", "metabolon_v1.1_example.xlsx", package = "metaboprep"), 
-                    sheet = "OrigScale",      ## The name of the sheet in the excel file to read in
-                    return_Metaboprep = TRUE  ## Whether to return a Metaboprep object (TRUE) or a list (FALSE)
-                    )
+                         sheet = "OrigScale",      ## The name of the sheet in the excel file to read in
+                         return_Metaboprep = FALSE  ## Whether to return a Metaboprep object (TRUE) or a list (FALSE)
+                         )
+
+# create metaboprep object
+mydata = Metaboprep(data     = mydata$data, 
+                    features = mydata$features, 
+                    samples  = mydata$samples)
 
 ```
 
