updating the format of the README

--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,7 @@ mydata <- read_metabolon(system.file("extdata", "metabolon_v1.1_example.xlsx", p
                          )
 
 # create metaboprep object
-mydata = Metaboprep(data     = mydata$data, 
+mydata <-  Metaboprep(data     = mydata$data, 
                     features = mydata$features, 
                     samples  = mydata$samples)
 
